<resources>
    <string name="app_name">Time Tracker</string>
    <string name="title_activity_select_categories">SelectCategories</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cat_title">Select Categories</string>
    <string name="cat_description">Pick categories of apps you\'d like to be recommended.</string>
    <string name="create_an_account">Create an account</string>
    <string name="email_address">email address</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="job">job</string>
    <string name="done">Done</string>
    <string name="fitness">Fitness</string>
    <string name="music">Music</string>
    <string name="house_amp_home"><![CDATA[House & Home]]></string>
    <string name="sports">Sports</string>
    <string name="beauty">Beauty</string>
    <string name="medical">Medical</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="social">Social</string>
    <string name="parenting">Parenting</string>
    <string name="photography">Photography</string>
    <string name="productivity">Productivity</string>
    <string name="entertainment">Entertainment</string>
    <string name="education">Education</string>
    <string name="gaming">Gaming</string>
    <string name="dating">Dating</string>
    <string name="shopping">Shopping</string>
    <string name="art">Art</string>
    <string name="travel">Travel</string>
    <string name="news">News</string>
    <string name="finance">Finance</string>
    <string name="food_amp_drink"><![CDATA[Food & Drink]]></string>
</resources>